@@ -19,6 +19,7 @@
 - [#385] Add 'Open Recent' option in Tape.exe, 'File' dropdown menu.
 
 # Version 0.4.4
+- [#464] Crash. Issue with modeling node objects.
 - [#463] Wrong export to DXF format.
 - Fixed issue with deleting detail nodes.
 - [#458] Issue with segment of curve.
